tests/ui/parser/let/suggest-const-for-global-var.stderr
error: `let` statements are not allowed outside of functions or const blocks
  --> $DIR/suggest-const-for-global-var.rs:1:1
   |
LL | let X: i32 = 12;
   | ^^^
   |
   = note: `let` cannot be used to define global variables
help: consider using `static` to define a global variable
   |
LL - let X: i32 = 12;
LL + static X: i32 = 12;
   |
help: consider using `const` to define a constant
   |
LL - let X: i32 = 12;
LL + const X: i32 = 12;
   |

error: aborting due to 1 previous error

